<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateWorksheetFragment"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv_create_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/create_worksheet_title"
                android:textAlignment="center"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/et_worksheet_title"
                android:layout_width="75pt"
                android:layout_height="42dp"
                android:layout_gravity="center_horizontal"
                android:layout_toRightOf="@id/tv_create_header"
                android:hint="Title"
                android:inputType="text"
                android:scrollbars="horizontal"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_q1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_create_header"
                android:text="@string/question1" />

            <EditText
                android:id="@+id/et_a1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_q1"
                android:layout_marginBottom="16dp"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:lines="5"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_q2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/et_a2"
                android:text="@string/question2" />

            <EditText
                android:id="@+id/et_a2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_a1"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:gravity="top"
                android:lines="5"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_q3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/et_a3"
                android:text="@string/question3" />

            <EditText
                android:id="@+id/et_a3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_a2"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:gravity="top"
                android:lines="5"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/postEvent_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_a3"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:text="@string/postEventTitle"
                android:textAlignment="center"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


            <!--TODO Post Event -->


            <TextView
                android:id="@+id/tv_q4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/postEvent_TextView"
                android:text="@string/question4" />

            <EditText
                android:id="@+id/et_a4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_q4"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:gravity="top"
                android:lines="5"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_q5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/et_a5"
                android:text="@string/question5" />

            <EditText
                android:id="@+id/et_a5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_a4"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:gravity="top"
                android:lines="5"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_q6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/et_a6"
                android:text="@string/question6" />

            <EditText
                android:id="@+id/et_a6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_a5"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:gravity="top"
                android:lines="5"
                android:textSize="14sp" />


            <Button
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_a6"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/saveBtn"
                android:textAllCaps="false" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>